testsuite/poke.pkl/add-arrays-diag-1.pk
/* { dg-do compile } */

var a = [1,2,3] + ["foo" + "bar"]; /* { dg-error "invalid operand\n.*" } */
